FriendsException, no encontraba formatted()
Preguntar que onda con formatted() porque varias veces me tiro este
error